feat: Fix create and delete endpoints
