# backend/model/shopping-list.go
@@ -3,10 +3,14 @@ package model
 import "time"
 
 type ShoppingList struct {
-	ID        uint           `gorm:"primaryKey"`
+	ID        uint           `json:"id" gorm:"primaryKey"`
 	Name      string         `json:"name"`
-	Completed bool           `json:"completed"`
 	CreatedAt time.Time      `json:"created_at"`
 	UpdatedAt time.Time      `json:"updated_at"`
-	Items     []ShoppingItem `gorm:"foreignKey:ShoppingListID"`
+	Items     []ShoppingItem `json:"items" gorm:"foreignKey:ShoppingListID"`
+}
+
+type ApiCreateShoppingList struct {
+	Name  string                  `json:"name"`
+	Items []ApiCreateShoppingItem `json:"items"`
 }
